moved markup parsing helpers from HiddenSwitchMechanic into the BaseMechanic